discussion/kv_engine/177742/177742_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

toy: expose sstable writer

Change-Id: Id698b34c80e96a34938be3c745a73840581bf863

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2022-07-19 13:47:01.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-19 13:51:26.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47918/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47918/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40261/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40261/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:2314:54:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40261/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19086/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28: error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"? [clang-diagnostic-error]
    configuration.magmaCfg.SSTableWriteBufferSize = configuration.getMagmaSstableWriterBufferSize();
                           ^~~~~~~~~~~~~~~~~~~~~~
                           SSTableWriterBufferSize
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:944:12: note: "SSTableWriterBufferSize" declared here
    size_t SSTableWriterBufferSize{1024 * 512};
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:86:43: error: no member named "getMagmaSstableWriterBufferSize" in "Configuration" [clang-diagnostic-error]
    magmaSstableWriterBufferSize = config.getMagmaSstableWriterBufferSize();
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19086/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19086/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8772/ : FAILURE

Compile error at [2022-07-19T13:48:01.172Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8772/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8868/ : FAILURE

Compile error at [2022-07-19T13:49:30.981Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:13:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8868/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21349/ : FAILURE

Compile error at [2022-07-19T13:49:55.361Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: ?struct magma::Magma::Config? has no member named ?SSTableWriteBufferSize?; did you mean ?SSTableWriterBufferSize??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21349/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22048/ : FAILURE

Compile error at [2022-07-19T13:48:08.582Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22048/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20991/ : FAILURE

Compile error at [2022-07-19T13:49:09.388Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:13:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20991/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20236/ : FAILURE

Compile error at [2022-07-19T13:50:39.709Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20236/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29385/ : FAILURE

Compile error at [2022-07-19T13:48:24.152Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29385/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18248/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
